--- a/cms-net/cms-net.csproj
+++ b/cms-net/cms-net.csproj
@@ -9,16 +9,17 @@
 
   <ItemGroup>
     <None Remove="Views\Admin\" />
-    <None Remove="Views\Page\Components\" />
-    <None Remove="Views\Page\Components\card\" />
-    <None Remove="Views\Page\Components\visore\" />
     <None Remove="Context\" />
+    <None Remove="Views\Page\Components\card\data.csv" />
+    <None Remove="Views\Page\Components\visore\data.csv" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Views\Page\Components\card\data.csv" />
+    <Content Include="Views\Page\Components\visore\data.csv" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Admin\" />
-    <Folder Include="Views\Page\Components\" />
-    <Folder Include="Views\Page\Components\card\" />
-    <Folder Include="Views\Page\Components\visore\" />
     <Folder Include="Context\" />
   </ItemGroup>
   <ItemGroup>
@@ -27,5 +28,10 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.7" />
   </ItemGroup>
 </Project>
